# streamn-cli

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
reeln/: __init__.py
reeln/commands/: config_cmd.py  game.py
reeln/core/: config.py  highlights.py  plugin_config.py  plugin_registry.py  prompts.py
reeln/models/: game.py
reeln/plugins/: hooks.py  loader.py  registry.py
registry/: plugins.json
tests/: conftest.py
tests/integration/: conftest.py  test_cli_lifecycle.py
tests/unit/commands/: test_game.py  test_render.py
tests/unit/core/: test_config.py  test_highlights.py  test_plugin_config.py  test_plugin_registry.py  test_prompts.py
tests/unit/models/: test_game.py
tests/unit/plugins/: conftest.py  test_hooks.py  test_loader.py
